# DockQ

./: .gitignore  DockQ.py  LICENSE  Makefile  README.md  clean.bash  fnat  pyproject.toml  run_test.sh  setup.cfg  setup.py  update_testdata.sh
.github/workflows/: main.yml
PERL-scripts-for-alignment-and-renumbering-of-PDB-files/: README.numbering  renumber_pdb.pl
examples/: 1HHO_hem.cif  2HHB_hem.cif
scripts/: README.numbering  fix_numbering.pl  renumber_pdb.pl
src/: fnat.c  molecule.c  molecule.h
src/DockQ/: DockQ.py  __main__.py  constants.py  operations.pyx  operations_nocy.py  parsers.py
testdata/: 1A2K.dockq  1A2K.dockq2  1EXB.dockq  1EXB_.ABC.dockq  1EXB_AB.BA.dockq  1EXB_ABCDEFGH.BADCFEHG.dockq  1EXB_DH.AE.dockq  1EXB_DH.AE_cif.dockq  6q2n_peptide.dockq  dimer_dimer.dockq  model.dockq
