[metadata]
name = DockQ
version = 2.0

[options]
package_dir =
    =src
packages = find:
install_requires =
    setuptools
    cython
    tqdm
    parallelbar
    numpy~=1.21
    biopython>=1.79

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    DockQ = DockQ.__main__:main

