[metadata]
name = DockQ
version = 2.1.3

[options]
package_dir =
    =src
packages = find:
install_requires =
    setuptools
    cython
    parallelbar
    numpy>=2.0
    biopython>=1.79
    networkx

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    DockQ = DockQ.__main__:main

[coverage:run]
include =
    */DockQ/*

